--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -17,7 +17,7 @@
 </head>
 <body ng-app="ATApp">
 <div ng-include="" src="'partials/navbar.html'"></div>
-<div class="container" ng-view=""></div>
+<div class="container-fluid" ng-view=""></div>
 
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
